--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
-  }
+	"name": "test",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"chart.js": "^2.8.0",
+		"core-js": "^3.6.5",
+		"firebase": "~8.0.0",
+		"lodash": "^4.17.21",
+		"materialize-css": "^1.0.0-rc.2",
+		"vue": "^2.6.11",
+		"vue-chartjs": "^3.4.2",
+		"vue-meta": "^2.4.0",
+		"vue-router": "^3.2.0",
+		"vuejs-paginate": "^2.1.0",
+		"vuelidate": "^0.7.6",
+		"vuex": "^3.4.0"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "~4.2.0",
+		"@vue/cli-plugin-router": "~4.2.0",
+		"@vue/cli-plugin-vuex": "~4.2.0",
+		"@vue/cli-service": "~4.2.0",
+		"vue-template-compiler": "^2.6.11"
+	}
 }
